--- a/docs/stylesheets/theme.css
+++ b/docs/stylesheets/theme.css
@@ -9,3 +9,8 @@
   --md-primary-fg-color--light: #1d7ec1;
   --md-primary-fg-color--dark: #13537e;
 }
+
+.center {
+    display: block;
+    margin: 0 auto;
+}
